05 Jan 1998
- improved handling of atypical or moved installations (Martin,Sven,Lars)
- a QString::printf issue resolved (Sven,Lars)
20 Dec 1998 David Faure <David.Faure@insa-lyon.fr
- "-e" added to session management
- slight overall improvements
20 Dec 1998
- fixed or worked around a marking issue in scrollUp/scrollDown.
04 Dec 1998 Alex Zepeda <garbanzo@hooked.net>
- README: Removed comment about beta testing, it's rather irrelevant.
30 Nov 1998
- added DND support
26 Nov 1998
- added xterm-83 patch, vim.schema
20 Nov 1998
- some works on integrating documentation
14 Nov 1998 Peter Silva <peter.silva@kde.org>
- added -vt_sz command line option.
- added Ctrl modifier for text selection without line breaks.
- started working on word-class (just stubs, nothing complete.)  
- documented the Ctrl-modifier, fixed section headings.
09 Nov 1998
- minor bugs fixed.
- putenv/setenv - prefered Solaris compatibility over
  a workaround for some broken gcc/clib version
04 Nov 1998
- minor bug fixes integrated
- xterm color schema added
- linux color schema added
- linux8x8.pcf.gz added
01 Nov 1998
- minor bugs fixed to handle unexpected or incomplete installations
  and broken configuration scrips better.
- FreeBSD adjustments
29 Oct 1998
- sessions reactived
- Session/Command menu additionally with Shift/Control+RightMouse
- Function keys adjusted for Linux console emulation.
- rolled linux console font
- schema for system colors added (hello Peter!)
28 Oct 1998
- tracking down licence issues
- spent far to much time on explaining them
27 Oct 1998 Mario Weilguni <mweilguni@kde.org>
- prevented TEWidget from accepting font-change-requests from 
  KDE's "Display properties"
- fixed a segfault caused by reading a non-existant directory in
  TEDemo::loadAllSchemas() and TEDemo::loadSessionCommands()
25 Oct 1998
- marking within mouse aware application now needs an extra shift
- added command configuration files /opt/kde/share/apps/konsole/*.kdelnk
24 Oct 1998